adding basic layout

--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html>
 <html>
-  <link rel="stylesheet/less" href="/less/dungeon.ci.less" type="text/css" media="screen" charset="utf-8">
-  
-  <script src='/js/coffee-script.js'  type="text/javascript" charset="utf-8"> </script>
-  <script src='/js/less-1.3.0.min.js' type="text/javascript" charset="utf-8"> </script>
+  <head>
+    <title>dungeon.ci</title>
 
+    <link rel="stylesheet/less" href="/less/dungeon.ci.less" type="text/css" media="screen" charset="utf-8">
 
-  <script src='/coffee/dungeon.ci.coffee' type="text/coffeescript" charset="utf-8"> </script>
+    <script src='/js/coffee-script.js'  type="text/javascript" charset="utf-8"> </script>
+    <script src='/js/less-1.3.0.min.js' type="text/javascript" charset="utf-8"> </script>
+
+    <script src='/coffee/dungeon.ci.coffee' type="text/coffeescript" charset="utf-8"> </script>
+  </head>
+  <body>
+    <canvas id='map'></canvas>
+    <aside  id='stats'></aside>
+    <footer id='terminal'></footer>
+  </body>
 </html>
