Adding in fabric

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 
     <link rel="stylesheet/less" href="/less/dungeon.ci.less" type="text/css" media="screen" charset="utf-8">
 
+    <script src='/js/fabric.min.js'  type="text/javascript" charset="utf-8"> </script>
     <script src='/js/coffee-script.js'  type="text/javascript" charset="utf-8"> </script>
     <script src='/js/less-1.3.0.min.js' type="text/javascript" charset="utf-8"> </script>
 
     <script src='/coffee/dungeon.ci.coffee' type="text/coffeescript" charset="utf-8"> </script>
   </head>
   <body>
-    <canvas id='map'></canvas>
+    <header><h1>DUNGEON CI</h1></header>
+    <div id='map'></div>
     <aside  id='stats'></aside>
     <footer id='terminal'></footer>
   </body>
